@@ -4,6 +4,7 @@ INCLUDES =						\
 	-I$(top_srcdir)/calendar			\
 	-I$(top_builddir)/calendar			\
 	-I$(top_srcdir)/libical/src			\
+	-I$(top_builddir)/libical/src			\
 	-I$(top_srcdir)/libwombat			\
 	-I$(top_builddir)/libwombat			\
 	$(EVOLUTION_CALENDAR_CFLAGS)
