@@ -1,5 +1,16 @@
 2003-10-15  Rodrigo Moya <rodrigo@ximian.com>
 
+	* pcs/Makefile.am: added missing header directories.
+
+	* pcs/cal-factory.h: include <libical/ical.h>, not <ical.h>.
+
+	* gui/dialogs/meeting-page.c: added missing headers.
+	(meeting_page_construct): free 'backend_address' as returned
+	by cal_client_get_cal_address(). Removed code to create the
+	meeting model's ETable not removed with the merge.
+
+	* gui/e-meeting-list-view.c: updated addressbook headers.
+
 	* gui/gnome-cal.h: added missing ',' in the GnomeCalendarViewType
 	enum.
 	
